--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
         <div class="grid-container">
 
-            <div class="item1">1</div>
+            <div class="item1">
+                
+                <p class="logo"><a href="">Logo</a></p></div>
 
             <div class="item2">2</div>
 
