--- a/index.html
+++ b/index.html
@@ -9,47 +9,66 @@
     </head>
     <body>
 
-        <div class="grid-container">
+        <div class="content-box">
 
-            <div class="item1">
-                
-                <p class="logo"><a href="">Logo</a></p></div>
+            <div class="grid-container">
 
-            <div class="item2">2</div>
+                <div class="item1">
 
-            <div class="item3">3</div>
+                    <div class="container">
 
-            <div class="item4">4</div>
+                        <p class="item16" class="logo">LOGO</p>
 
-            <div class="item5">5</div>
+                        <p class="item17"><a href="">JOYAS</a></p>
+                        <p class="item18"><a href="">ORO & DIAMANTES</a></p>
+                        <p class="item19"><a href="">SHOP THE LOOK</a></p>
+                        <p class="item20"><a href="">TENDENCIAS</a></p>
+                        <p class="item21"><a href="">SOBRE NOSOTRAS</a></p>
+                        <p class="item22"><a href="">#MEMEMARTES</a></p>
 
-            <div class="item6">6</div>
+                        <p class="item23"><a href="">F.A.Q</a></p>
 
-            <div class="item7">7</div>
+                    </div>
 
-            <div class="item8">8</div>
+                </div>
 
-            <div class="item9">9</div>
+                <div class="item2">2</div>
 
-            <div class="item10">10</div>
+                <div class="item3">3</div>
 
-            <div class="item11">11</div>
+                <div class="item4">4</div>
 
-            <div class="item12">12</div>
+                <div class="item5">5</div>
 
-            <div class="item13">13</div>
+                <div class="item6">6</div>
 
-            <div class="item14">14</div>
+                <div class="item7">7</div>
 
-            <div class="item15">15</div>
+                <div class="item8">8</div>
 
-            <div class="item16">16</div>
+                <div class="item9">9</div>
 
-            <div class="item17">17</div>
+                <div class="item10">10</div>
 
-            <div class="item18">18</div>
+                <div class="item11">11</div>
 
-            <div class="item19">19</div>
+                <div class="item12">12</div>
+
+                <div class="item13">13</div>
+
+                <div class="item14">14</div>
+
+                <div class="item15">15</div>
+
+                <div class="item16">16</div>
+
+                <div class="item17">17</div>
+
+                <div class="item18">18</div>
+
+                <div class="item19">19</div>
+
+            </div>
 
         </div>
 
