--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
                 </div>
 
-                <div class="item2">2</div>
+                <div class="item2"></div>
 
                 <div class="item3">
 
-                    <p>ALL <span class="free">-40% + FREE</span> Shipping whit no minimum order</p>
+                    <p>ALL  <span class="free"> -40% + FREE</span> Shipping whit no minimum order</p>
 
                 </div>
 
@@ -54,27 +54,27 @@
 
                 <div class="item6">
                     
-                    <img src="https://images.pexels.com/photos/3214241/pexels-photo-3214241.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260">
+                    
 
                 </div>
 
-                <div class="item7">7</div>
+                <div class="item7"></div>
 
-                <div class="item8">8</div>
+                <div class="item8"></div>
 
-                <div class="item9">9</div>
+                <div class="item9"></div>
 
-                <div class="item10">10</div>
+                <div class="item10"></div>
 
-                <div class="item11">11</div>
+                <div class="item11"></div>
 
-                <div class="item12">12</div>
+                <div class="item12"></div>
 
-                <div class="item13">13</div>
+                <div class="item13"></div>
 
-                <div class="item14">14</div>
+                <div class="item14"></div>
 
-                <div class="item15">15</div>
+                <div class="item15"></div>
 
                 <div class="item16">16</div>
 
