--- a/index.html
+++ b/index.html
@@ -4,12 +4,59 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Web Site 2 Home Page</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav>
-      <h1>Blablabla</h1>
-      <h4>blablabla</h4>
-    </nav>
+    <div class="content_wrapper">
+      <div class="header">
+        <div class="logo">Logo</div>
+        <nav class="navigation_menu">
+          <h3>Joyas</h3>
+          <h3>Oro & Diamantes</h3>
+          <h3>Shop the look</h3>
+          <h3>Tiendas Físicas</h3>
+          <h3>Sobre Nosotras</h3>
+          <h3>#MEMEMARTES</h3>
+          <h3>FAQ</h3>
+        </nav>
+      </div>
+
+      <div class="main_content">
+        <div class="promo_banner">
+          <div class="main_image"></div>
+          <div class="banner_promo40">Banner 40%</div>
+        </div>
+
+        <div class="shop">
+          <div class="Top_ventas">Top Ventas</div>
+          <div class="new_in">New In</div>
+          <div class="Pendientes">Pendientes</div>
+          <div class="Pendientes_sueltos">Pendientes Sueltos</div>
+          <div class="Collares">Collares</div>
+          <div class="Anillos">Anillos</div>
+          <div class="Pulseras">Pulseras</div>
+          <div class="Diamantes_Céline">Diamantes Céline</div>
+          <div class="Joyas_Personalizadas">Joyas Personalizadas</div>
+          <div class="Relojes">Relojes</div>
+          <div class="Tiendas">Tiendas</div>
+          <div class="Shop_the_Look">Shop the Look</div>
+        </div>
+      </div>
+
+      <div class="footer">
+        Footer
+        <div class="footer_nav_bar">
+          <div>
+            <li>Nosotros</li>
+            <li>Joyas</li>
+            <li>Regalos</li>
+          </div>
+          <div></div>
+          <div></div>
+        </div>
+        <img src="" alt="" />
+      </div>
+    </div>
   </body>
 </html>
