Added Images and some colors

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
       <div class="main_content">
         <div class="promo_banner">
           <div class="main_image"></div>
-          <div class="banner_promo40">Banner 40%</div>
+          <div class="banner_promo40">
+            TODO -40% + Envío GRATIS sin pedido mínimo
+          </div>
         </div>
 
         <div class="shop">
@@ -45,17 +47,42 @@
       </div>
 
       <div class="footer">
-        Footer
         <div class="footer_nav_bar">
-          <div>
-            <li>Nosotros</li>
-            <li>Joyas</li>
-            <li>Regalos</li>
+          <div class="Nosotros">
+            <h4>Nosotros</h4>
+            <li>Quiénes Somos</li>
+            <li>Nuestro Compromiso</li>
+            <li>Envíos y Devoluciones</li>
+            <li>Preguntas Frecuentes</li>
+            <li>Consejos para tus Joyas</li>
+            <li>Opiniones</li>
+            <li>Contacto</li>
           </div>
-          <div></div>
-          <div></div>
+          <div class="Joyas">
+            <h4>Joyas</h4>
+            <li>Novedades</li>
+            <li>Top Ventas</li>
+            <li>Oro y Diamantes</li>
+            <li>Regalos</li>
+            <li>Collares</li>
+            <li>Pendientes</li>
+            <li>Pendientes Sueltos</li>
+            <li>Pulseras</li>
+            <li>Personalizable</li>
+            <li>Tobilleras</li>
+          </div>
+
+          <div class="Regalos">
+            <h4>Regalos</h4>
+            <li>San Valentin</li>
+            <li>Para Ella</li>
+            <li>Para Mamá</li>
+            <li>Para Amigas</li>
+            <li>Personalizado</li>
+            <li>Amigo Invisible (-25€)</li>
+          </div>
         </div>
-        <img src="" alt="" />
+        <img src="" alt="Images from payppal" />
       </div>
     </div>
   </body>
