--- a/index.html
+++ b/index.html
@@ -40,29 +40,29 @@
 
                 </div>
 
-                <div class="item4"><h1>Top sales</h1></div>
+                    <div class="item4"><a href=""><h1>Top sales</h1></a></div>
 
-                <div class="item5"><h1>New in All jewels from the last 30 days</h1></div>
+                    <div class="item5"><a href=""><h1>New in All jewels from the last 30 days</h1></a></div>
 
-                <div class="item6"><h1>Slopes</h1></div>
+                    <div class="item6"><a href=""><h1>Slopes</h1></a></div>
 
-                <div class="item7"><h1>Loose earrings</h1></div>
+                    <div class="item7"><a href=""><h1>Loose earrings</h1></a></div>
 
-                <div class="item8"><h1>Necklaces</h1></div>
+                    <div class="item8"><a href=""><h1>Necklaces</h1></a></div>
 
-                <div class="item9"><h1>Rings</h1></div>
+                    <div class="item9"><a href=""><h1>Rings</h1></a></div>
 
-                <div class="item10"><h1>Bracelets</h1></div>
+                    <div class="item10"><a href=""><h1>Bracelets</h1></a></div>
 
-                <div class="item11"><h1>Céline Diamonds</h1></div>
+                    <div class="item11"><a href=""><h1>Céline Diamonds</h1></a></div>
 
-                <div class="item12"><h1>Custom jewelry</h1></div>
+                    <div class="item12"><a href=""><h1>Custom jewelry</h1></a></div>
 
-                <div class="item13"><h1>Clocks</h1></div>
+                    <div class="item13"><a href=""><h1>Clocks</h1></a></div>
 
-                <div class="item14"><h1>Stores</h1></div>
+                    <div class="item14"><a href=""><h1>Stores</h1></a></div>
 
-                <div class="item15"><h1>Shop the Lok </h1></div>
+                    <div class="item15"><a href=""><h1>Shop the Look </h1></a></div>
 
                 <div class="item16">
 
@@ -72,13 +72,13 @@
 
                     <ul>
 
-                        <li>About us</li>
-                        <li>Commitment</li>
-                        <li>Shipping & Returns</li>
-                        <li>Frequent questions</li>
-                        <li>Tips for your jewelry</li>
-                        <li>Feedback</li>
-                        <li>Contact</li>
+                        <li><a href="">About us</a></li>
+                        <li><a href="">Commitment</a></li>
+                        <li><a href="">Shipping & Returns</a></li>
+                        <li><a href="">Frequent questions</a></li>
+                        <li><a href="">Tips for your jewelry</a></li>
+                        <li><a href="">Feedback</a></li>
+                        <li><a href="">Contact</a></li>
 
                     </ul>
 
@@ -92,17 +92,17 @@
 
                     <ul>
 
-                        <li>What's new?</li>
-                        <li>Top sales</li>
-                        <li>Gold and diamonds</li>
-                        <li>Gifts</li>
-                        <li>Necklaces</li>
-                        <li>Slopes</li>
-                        <li>Loose earrings</li>
-                        <li>Rings</li>
-                        <li>Bracelets</li>
-                        <li>Personalized</li>
-                        <li>Anklets</li>
+                        <li><a href="">What's new?</a></li>
+                        <li><a href="">Top sales</a></li>
+                        <li><a href="">Gold and diamonds</a></li>
+                        <li><a href="">Gifts</a></li>
+                        <li><a href="">Necklaces</a></li>
+                        <li><a href="">Slopes</a></li>
+                        <li><a href="">Loose earrings</a></li>
+                        <li><a href="">Rings</a></li>
+                        <li><a href="">Bracelets</a></li>
+                        <li><a href="">Personalized</a></li>
+                        <li><a href="">Anklets</a></li>
 
                     </ul>
 
@@ -116,12 +116,12 @@
 
                     <ul>
 
-                        <li>Valentine's Day</li>
-                        <li>For her</li>
-                        <li>For Mom</li>
-                        <li>For friends</li>
-                        <li>Custom</li>
-                        <li>Invisible friend</li>
+                        <li><a href="">Valentine's Day</a></li>
+                        <li><a href="">For her</a></li>
+                        <li><a href="">For Mom</a></li>
+                        <li><a href="">For friends</a></li>
+                        <li><a href="">Custom</a></li>
+                        <li><a href="">Invisible friend</a></li>
 
                     </ul>
 
