--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css">
-        <title>Document</title>
+        <title>Logo</title>
     </head>
     <body>
 
@@ -40,11 +40,7 @@
 
                 </div>
 
-                    <div class="item4"><a href="">
-                        
-                        <!-- <a><img src="https://images.pexels.com/photos/458766/pexels-photo-458766.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" width="100%" height="100%"></a> -->
-
-                        <h1>Top sales</h1></a></div>
+                    <div class="item4"><a href=""><h1>Top sales</h1></a></div>
 
                     <div class="item5"><a href=""><h1>New in All jewels from the last 30 days</h1></a></div>
 
