--- a/product-file.html
+++ b/product-file.html
@@ -26,38 +26,65 @@
             </div>
 
         </div>
-        <div class="title1"><H3>HEXAGON EARRINGS</H3></div>
+        <div class="title1"><H3>HEXAGON EARRINGS</H3><hr></div>
         <div class="reverse"><p>HOME <span class="more">&gt;</span> EARRINGS <span class="more">&gt;</span> HEXAGON EARRINGS</p></div>
-        <div class="image1"><img src="https://cdn.shopify.com/s/files/1/0823/9721/products/ZPEHELS925P00XX_w6.jpg" width="100%"></div>
+        <div class="image1">
+            <img src="https://cdn.shopify.com/s/files/1/0823/9721/products/ZPEHELS925P00XX_w6.jpg" width="100%">
+            <div class="image2"><img src="https://cdn.shopify.com/s/files/1/0823/9721/products/ZPEHELS925P00XX.jpg?v=1608710615" width="100%"></div>
+        </div>
         <div class="button1">
             <p class="price"><del>24.95€ </del><span class="price1"> 14.97€</span></p>
             <p class="shipping">SHIPPING 24-48 HOURS </p>
             <button>ADD TO CART</button>
             <hr>
-            <p>Handmade and Made in Spain</p>
-            <p>OPINIONS</p>
+            <p class="center">Handmade and Made in Spain</p>
+            <p class="center1">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+                    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                </svg>
+
+                OPINIONS
+            </p>
             <hr>
-            <p>SHIPPING & RETURNS</p>
+            <p class="center1">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+                    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                </svg>
+
+                SHIPPING & RETURNS
+            </p>
             <hr>
             <h5>OTHER FINISHES</h5>
             <img src="https://cdn.shopify.com/s/files/1/0823/9721/products/ZPEHELS925P00XX.jpg?v=1608710615" width="100%">
             <h5>DETAILS</h5>
             <ul>
-                <li>Material: Brass</li>
-                <li>Finish: Rhodium plating</li>
-                <li>Details: Snap nut</li>
-                <li>Reason: 4cm long hexagon</li>
+                <li class="text">Material: Brass</li>
+                <li class="text">Finish: Rhodium plating</li>
+                <li class="text">Details: Snap nut</li>
+                <li class="text">Reason: 4cm long hexagon</li>
             </ul>
             <h5>DESCRIPTION</h5>
-            <p>If you are a fan of large earrings, the Hexagon are made for you. 
+            <p class="text">If you are a fan of large earrings, the Hexagon are made for you. 
                 Its geometric shape will highlight your features and will catch all eyes. </p>
 
         </div>
         <div class="title-content"><p>SIMILAR JEWELS</p></div>
-        <div class="content-image1"><p><span>24.95€</span><span>14.97€</span></p></div>
-        <div class="content-image2"><p><span>24.95€</span><span>14.97€</span></p></div>
-        <div class="content-image3"><p><span>24.95€</span><span>14.97€</span></p></div>
-        <div class="content-image4"><p><span>24.95€</span><span>14.97€</span></p></div>
+        <div class="content-image1">
+            <img src="https://cdn.shopify.com/s/files/1/0823/9721/products/ZPEARDO100P00XX.jpg" width="100%" alt="earring">
+            <p><del  class="price">24.95€</del><span class="price1">14.97€</span></p>
+        </div>
+        <div class="content-image2">
+            <img src="https://cdn.shopify.com/s/files/1/0823/9721/products/ZPEAROX100P00XX.jpg" width="100%" alt="earring">
+            <p><del class="price">24.95€</del><span  class="price1">14.97€</span></p>
+        </div>
+        <div class="content-image3">
+            <img src="https://cdn.shopify.com/s/files/1/0823/9721/products/ZPEAPES925P00XX.jpg" width="100%" alt="earring">
+            <p><del  class="price">24.95€</del><span  class="price1">14.97€</span></p>
+        </div>
+        <div class="content-image4">
+            <img src="https://cdn.shopify.com/s/files/1/0823/9721/products/ZPESTHO925A00XX-W1-HI.jpg?" width="100%" alt="earring">
+            <p><del  class="price">24.95€</del><span class="price1">14.97€</span></p>
+        </div>
 
         <div class="we1">
             <h3>WE</h3>
