--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
                     <div class="container">
 
-                        <p class="item20">LOGO</p>
+                        <p class="item20"><a href="index.html">LOGO</a></p>
 
                         <p class="item21"><a href="">JOYAS</a></p>
                         <p class="item22"><a href="">ORO & DIAMANTES</a></p>
@@ -40,9 +40,9 @@
 
                 </div>
 
-                    <div class="item4"><a href=""><h1>Top sales</h1></a></div>
+                    <div class="item4"><a href="category-page.html"><h1>Top sales</h1></a></div>
 
-                    <div class="item5"><a href=""><h1>New in All jewels from the last 30 days</h1></a></div>
+                    <div class="item5"><a href=""><h1>New in </h1><h2> All jewels from the last 30 days</h2></a></div>
 
                     <div class="item6"><a href=""><h1>Slopes</h1></a></div>
 
