--- a/product-file.html
+++ b/product-file.html
@@ -14,7 +14,7 @@
 
             <div class="header-content">
 
-                <p class="logo">LOGO</p>
+                <p class="logo"><a href="index.html">LOGO</a></p>
                 <p class="header1"><a href="">JOYAS</a></p>
                 <p class="header2"><a href="">ORO & DIAMANTES</a></p>
                 <p class="header3"><a href="">SHOP THE LOOK</a></p>
@@ -27,7 +27,7 @@
 
         </div>
         <div class="title1"><H3>HEXAGON EARRINGS</H3><hr></div>
-        <div class="reverse"><p>HOME <span class="more">&gt;</span> EARRINGS <span class="more">&gt;</span> HEXAGON EARRINGS</p></div>
+        <div class="reverse"><p><a href="index.html">HOME</a> <span class="more">&gt;</span> <a href="category-page.html">EARRINGS</a> <span class="more">&gt;</span> HEXAGON EARRINGS</p></div>
         <div class="image1">
             <img src="https://cdn.shopify.com/s/files/1/0823/9721/products/ZPEHELS925P00XX_w6.jpg" width="100%">
             <div class="image2"><img src="https://cdn.shopify.com/s/files/1/0823/9721/products/ZPEHELS925P00XX.jpg?v=1608710615" width="100%"></div>
