--- a/questions.html
+++ b/questions.html
@@ -11,7 +11,7 @@
 
     <div class="header-content">
 
-        <p class="logo">LOGO</p>
+        <p class="logo"><a href="index.html">LOGO</a></p>
         <p class="header1"><a href="">JOYAS</a></p>
         <p class="header2"><a href="">ORO & DIAMANTES</a></p>
         <p class="header3"><a href="">SHOP THE LOOK</a></p>
